fixed about us text spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -389,6 +389,7 @@ td, th {
   .abouttext p {
     font-size: 18px;
     padding-top: 7px;
+    padding-bottom: 17px;
   }
 
   
